--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
-// @import "_custom.scss"
-// @import "custom";
-@import './test.scss';
+
 @import "~bootstrap/scss/bootstrap";
+@import './calendar_days.scss';
+@import './calendar_table.scss';
 // @import './\ _custom.scss'
+
