--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,5 @@
 @import "~bootstrap/scss/bootstrap";
 @import './calendar_days.scss';
 @import './calendar_table.scss';
-// @import './\ _custom.scss'
-
+@import './variables.scss';
+@import './calendar.scss'
