--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
   
-    $working-days:  rgb(86, 153, 98);
+    $working-days: rgb(33 117 93);
     $days-off: rgb(223 64 64);
-    $weekends: rgb(78, 78, 78);
+    $weekends: rgb(50 56 62);
