--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(18 20 22);
     font-family: sans-serif;
     display: flex;
     justify-content: center;
