add save to pdf

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,3 +2,5 @@
     $working-days: rgb(33 117 93);
     $days-off: rgb(223 64 64);
     $weekends: rgb(50 56 62);
+    $grey01:  rgba(255, 255, 255, 0.100);
+    $background-main: rgb(18 20 22);
