--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,5 +1,6 @@
+@import	'./variables.scss';
 body {
-    background-color: rgb(18 20 22);
+    background-color: $background-main;
     font-family: sans-serif;
     display: flex;
     justify-content: center;
