--- a/src/styles/calendar_days.scss
+++ b/src/styles/calendar_days.scss
@@ -12,7 +12,7 @@ width: 2rem;
     cursor: pointer;
     height: 5rem;
     border-color: aqua;
-    border: 1px solid rgba(255, 255, 255, 0.100);
+    border: 1px solid $grey01;
 }
 
 .date-wrapper:has(.weekends) {
